keep java11 compatibility